DroneServiceImpl.java (updated to prevent LOADING state if battery < 25%